base/ad/security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice
  namespace: adservice
spec:
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
      ports:
        - port: 9555
          protocol: TCP
  egress:
    - {}
